--- a/package.json
+++ b/package.json
@@ -12,15 +12,22 @@
     "lintfix": "prettier --write --list-different ."
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.4.1",
+    "@nuxtjs/firebase": "^8.2.2",
     "@nuxtjs/google-gtag": "^1.0.4",
+    "@nuxtjs/recaptcha": "^1.1.1",
+    "@nuxtjs/robots": "^2.5.0",
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.19.3",
+    "firebase": "^9.8.0",
+    "nodemailer": "^6.7.5",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vue-typed-js": "^0.1.2",
     "vuelidate": "^0.7.7",
-    "vuetify": "^2.6.1",
+    "vuetify": "^2.6.13",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
